unpackaged/main/default/objects/HR_Employee_Snapshot__c/HR_Employee_Snapshot__c.object-meta.xml
<CustomObject>
    <label>HR Employee Snapshot</label>
    <nameField>
        <label>HR Employee Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HR Employee Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>