unpackaged/main/default/objects/HR_Employee_Snapshot__c/fields/Total_Annual_Car_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Car_Allowance__c</fullName>
    <label>Total Annual Car Allowance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>