unpackaged/main/default/objects/HR_Employee_Snapshot__c/fields/Total_Annual_Salary__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Salary__c</fullName>
    <label>Total Annual Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>