unpackaged/main/default/objects/HR_Employee_Snapshot__c/fields/Total_Employer_NI_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Total_Employer_NI_Contribution__c</fullName>
    <label>Total Employer NI Contribution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>