unpackaged/main/default/objects/HR_Employee_Snapshot__c/fields/Total_Health_Cover__c.field-meta.xml
<CustomField>
    <fullName>Total_Health_Cover__c</fullName>
    <label>Total Health Cover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>