unpackaged/main/default/objects/HR_Employee_Snapshot__c/fields/Total_Variable_Commission__c.field-meta.xml
<CustomField>
    <fullName>Total_Variable_Commission__c</fullName>
    <label>Total Variable £- Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>